Fixing tree display for non visible nodes. preparing for the addition of the search function

--- a/src/app/components/ms-tree/ms-tree.component.less
+++ b/src/app/components/ms-tree/ms-tree.component.less
@@ -10,15 +10,24 @@
   border: 5px solid grey;
 }
 
+.tree-node {
+  margin: 1%;
+  vertical-align: center;
+}
+
 .tree-node-active:hover {
   color: #8ad3e2;
 }
 
-.tree-node-unauthorized {
-  float: right;
-  margin-left: 10px;
+.unauthorized-container {
+  display: inline-block;
   color: grey;
   cursor: default;
+}
+
+.tree-node-unauthorized {
+  display: inline-block;
+  margin-left: 10px;
 }
 
 .tree-node-inactive {
